growing-shop-java/src/main/java/com/example/growingshop/global/error/exception/NotAllowPathException.java
package com.example.growingshop.global.error.exception;

public class NotAllowPathException extends RuntimeException {
    public NotAllowPathException(String message) {
        super(message);
    }
}
